--- a/bandesal/WebContent/PlantillaLogin.xhtml
+++ b/bandesal/WebContent/PlantillaLogin.xhtml
@@ -52,7 +52,7 @@ font-size: 95% !important;
 
 
 .ui-widget-header1{
-background: url("images/snacklogo.jpg"); 
+background: url("images/logobs.jpg"); 
 background-repeat: no-repeat; 
 background-color: black;
 background-size:100%;
